--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
                     <a href="order.html" class="nav-link bg-green-700 text-white px-4 py-2 rounded-full hover:bg-green-800">Order Sekarang</a>
                 </nav>
                 <button class="md:hidden focus:outline-none">
+                    <!-- Mobile Menu -->
+<div id="mobile-menu" class="md:hidden hidden mt-4 space-y-4">
+    <a href="index.html" class="block text-green-800 font-medium">Home</a>
+    <a href="menu.html" class="block text-gray-600 hover:text-green-800">Menu</a>
+    <a href="tentang.html" class="block text-gray-600 hover:text-green-800">Tentang Kami</a>
+    <a href="order.html" class="block bg-green-700 text-white px-4 py-2 rounded-full text-center hover:bg-green-800">Order Sekarang</a>
+</div>
+
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
                     </svg>
