--- a/tentang.html
+++ b/tentang.html
@@ -93,6 +93,7 @@
             </div>
         </div>
     </nav>
+    
 
     <!-- Hero Section -->
     <section class="hero-section">
@@ -423,20 +424,16 @@
     <div class="md:hidden fixed bottom-0 left-0 right-0 bg-white shadow-lg z-50">
         <div class="flex justify-around py-3">
             <a href="index.html" class="flex flex-col items-center text-gray-700">
-                <i class="fas fa-home text-xl"></i>
-                <span class="text-xs mt-1">Beranda</span>
+                <span class="text-xs mt-1">Home</span>
             </a>
-            <a href="tentang.html" class="flex flex-col items-center text-green-600">
-                <i class="fas fa-info-circle text-xl"></i>
-                <span class="text-xs mt-1">Tentang</span>
+            <a href="menu.html" class="flex flex-col items-center text-green-600">
+                <span class="text-xs mt-1">Menu</span>
+            </a>
+            <a href="tentang.html" class="flex flex-col items-center text-gray-700">
+                <span class="text-xs mt-1">Tentang Kami</span>
             </a>
             <a href="order.html" class="flex flex-col items-center text-gray-700">
-                <i class="fas fa-utensils text-xl"></i>
-                <span class="text-xs mt-1">Pesan</span>
-            </a>
-            <a href="#" class="flex flex-col items-center text-gray-700">
-                <i class="fas fa-user text-xl"></i>
-                <span class="text-xs mt-1">Akun</span>
+                <span class="text-xs mt-1">Order</span>
             </a>
         </div>
     </div>
@@ -470,6 +467,9 @@
             animateOnScroll(); // Run once on load
         });
     </script>
+</body>
+</html>
+
 </body>
 </html>
 
