--- a/order.html
+++ b/order.html
@@ -73,9 +73,12 @@
         <div class="container mx-auto px-6 text-center">
             <h1 class="text-4xl md:text-6xl font-bold mb-6 text-white">Catering Berkualitas dari Bogor</h1>
             <p class="text-xl md:text-2xl mb-8 text-white max-w-2xl mx-auto">Hidangan lezat dengan bahan segar dan rasa autentik untuk acara spesial Anda.</p>
-            <div class="flex flex-col md:flex-row justify-center space-y-4 md:space-y-0 md:space-x-4">
-                <ahref="https://wa.me/6283811902668" class="border-2 border-white text-white btn-primary text-white px-8 py-3 rounded-full text-lg font-semibold" target="_blank">pesan sekarang</a>
-                <a href="menu.html" class=" text-white px-8 py-3 rounded-full text-lg font-semibold hover:text-green-800 transition">Lihat Menu</a>
+            <div class="flex flex-col md:flex-row justify-center space-y-4 md:space-y-3 md:space-x-2">
+                <ahref="https://wa.me/6283811902668" class="text-white btn-primary text-white px-8 py-3 rounded-full text-lg font-semibold" target="_blank">pesan sekarang</a>
+                </ahref></div>
+                <br>
+                 <div class="flex flex-col md:flex-row justify-center space-y-4 md:space-y-3 md:space-x-2"></div>
+                 <a href="menu.html" class=" btn-primary text-white px-8 py-3text-white px-8 py-3 rounded-full text-lg font-semibold hover:text-green-800 transition">Lihat Menu</a>
             </div>
         </div>
     </section>
