--- a/tentang.html
+++ b/tentang.html
@@ -107,7 +107,7 @@
     <section class="py-16 bg-white">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
-                <h2 class="section-title text-3xl font-bold text-gray-800 mb-4">Tentang FreshBites</h2>
+                <h2 class="section-title text-3xl font-bold text-gray-800 mb-4">Tentang Syahreza Catering</h2>
                 <p class="text-gray-600 max-w-4xl mx-auto">FreshBites lahir dari kecintaan kami terhadap makanan segar dan keinginan untuk berbagi pengalaman kuliner yang luar biasa.</p>
             </div>
             
@@ -176,16 +176,16 @@
                     <div class="w-32 h-32 mx-auto rounded-full overflow-hidden border-4 border-green-100 mb-4">
                         <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/cf4baedb-dcf6-42f0-8725-577467e45b64.png" alt="Kepala Koki dengan pengalaman 15 tahun di kuliner modern dan tradisional" class="w-full h-full object-cover">
                     </div>
-                    <h3 class="text-xl font-semibold text-gray-800">Chef Andi</h3>
+                    <h3 class="text-xl font-semibold text-gray-800">Chef Erwan</h3>
                     <p class="text-green-600 font-medium mb-3">Kepala Koki</p>
-                    <p class="text-gray-600">Dengan 15 tahun pengalaman, Chef Andi membawa keahlian internasional ke dapur FreshBites.</p>
+                    <p class="text-gray-600">Dengan 15 tahun pengalaman, Chef Erwan membawa keahlian internasional ke dapur Syahreza .</p>
                 </div>
                 
                 <div class="team-card bg-white rounded-lg overflow-hidden shadow-lg text-center p-6">
                     <div class="w-32 h-32 mx-auto rounded-full overflow-hidden border-4 border-green-100 mb-4">
                         <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/0089ee22-464d-4938-9f6a-72b82a59810b.png" alt="Ahli Gizi dengan spesialisasi makanan sehat dan organik" class="w-full h-full object-cover">
                     </div>
-                    <h3 class="text-xl font-semibold text-gray-800">Dr. Sari</h3>
+                    <h3 class="text-xl font-semibold text-gray-800">Ibu Lilis</h3>
                     <p class="text-green-600 font-medium mb-3">Ahli Gizi</p>
                     <p class="text-gray-600">Memastikan setiap hidangan tidak hanya lezat tapi juga bernutrisi tinggi.</p>
                 </div>
@@ -194,7 +194,7 @@
                     <div class="w-32 h-32 mx-auto rounded-full overflow-hidden border-4 border-green-100 mb-4">
                         <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/81631dc7-bd6a-4431-90cd-2ef395889abc.png" alt="Manajer operasional dengan fokus pada kualitas dan customer experience" class="w-full h-full object-cover">
                     </div>
-                    <h3 class="text-xl font-semibold text-gray-800">Budi</h3>
+                    <h3 class="text-xl font-semibold text-gray-800">Zalfa Shakila</h3>
                     <p class="text-green-600 font-medium mb-3">Manajer Operasional</p>
                     <p class="text-gray-600">Memastikan standar kualitas dan pengalaman pelanggan selalu prima.</p>
                 </div>
@@ -203,7 +203,7 @@
                     <div class="w-32 h-32 mx-auto rounded-full overflow-hidden border-4 border-green-100 mb-4">
                         <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/533f7754-287a-4270-9bd4-9d506bebf76d.png" alt="Direktur kreatif yang mengembangkan konsep dan menu inovatif" class="w-full h-full object-cover">
                     </div>
-                    <h3 class="text-xl font-semibold text-gray-800">Dian</h3>
+                    <h3 class="text-xl font-semibold text-gray-800">Rezaa</h3>
                     <p class="text-green-600 font-medium mb-3">Direktur Kreatif</p>
                     <p class="text-gray-600">Pemimipin di balik konsep FreshBites dan menu inovatif kami.</p>
                 </div>
