--- a/menu.html
+++ b/menu.html
@@ -315,7 +315,7 @@
         <div class="container mx-auto px-6 text-center">
             <h2 class="text-3xl font-bold mb-4">Pesan Sekarang</h2>
             <p class="text-xl mb-8 max-w-2xl mx-auto">Hubungi kami untuk memesan atau konsultasi kebutuhan catering Anda</p>
-           <a href="https://wa.me/6283811902668" class="text-white btn-primary text-white px-8 py-3 rounded-full text-lg font-semibold" target="_blank">Pesan sekarang</a>
+           <a href="https://wa.me/6283811902668" class="text-white btn-primary text-white px-8 py-3 rounded-full text-lg font-semibold" target="_blank">Order Online</a>
         </div>
     </section>
 
